# Education-Lead-Conversion-Model

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
input/: train_folds.csv
models/: binary_columns_fold_2.pkl  binary_mapping_fold_0.pkl  columns_to_drop.pkl  encoder_fold_2.pkl  final_log_reg_model.pkl  final_log_reg_rfe_model.pkl  imputer_fold_0.pkl  imputer_fold_100.pkl  imputer_fold_2.pkl  log_reg_features_fold_100.pkl  log_reg_fold_0.pkl  log_reg_fold_1.pkl  log_reg_fold_2.pkl  log_reg_fold_3.pkl  log_reg_fold_4.pkl  log_reg_rfe_features_fold_0.pkl  log_reg_rfe_features_fold_1.pkl  log_reg_rfe_features_fold_2.pkl  log_reg_rfe_features_fold_3.pkl  log_reg_rfe_features_fold_4.pkl  log_reg_rfe_fold_0.pkl  log_reg_rfe_fold_1.pkl  log_reg_rfe_fold_2.pkl  log_reg_rfe_fold_3.pkl  log_reg_rfe_fold_4.pkl  log_reg_rfe_ranking_fold_0.pkl  log_reg_rfe_ranking_fold_1.pkl  log_reg_rfe_ranking_fold_100.pkl  log_reg_rfe_ranking_fold_2.pkl  log_reg_rfe_ranking_fold_3.pkl  log_reg_rfe_ranking_fold_4.pkl  numerical_columns_fold_0.pkl  numerical_columns_fold_100.pkl  scaler_fold_0.pkl  scaler_fold_1.pkl  scaler_fold_100.pkl  scaler_fold_2.pkl  scaler_fold_3.pkl  scaler_fold_4.pkl
notebooks/: data_cleaning.ipynb  data_exploration.ipynb  logistic_model_evaluation.ipynb  model_building.ipynb  model_evaluation.ipynb  preprocessing.ipynb  rfe_model_evaluation.ipynb
src/: create_folds.py  data_cleaning.py  data_preprocessing.py  log_reg_model.py  log_reg_rfe_model.py  logging_utils.py  model_dispatcher.py  model_utils.py
streamlit_app/: app.py
