[tool.poetry]
name = "lead scoring"
version = "0.1.0"
description = "A logistic regression model to assign a lead score."
authors = ["Suraj Wate <suraj.wate@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
streamlit = "^1.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
