[tool.poetry]
name = "lead scoring"
version = "0.1.0"
description = "A logistic regression model to assign a lead score."
authors = ["Suraj Wate <suraj.wate@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
streamlit = "^1.37.1"
jupyter = "^1.0.0"
jupyterlab = "^4.2.4"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
